Fixed spelling in startup message and made error msg hidden when startup message is visible.

--- a/MHTCDashboard/src/main/webapp/css/style.css
+++ b/MHTCDashboard/src/main/webapp/css/style.css
@@ -611,28 +611,20 @@ svg text {
 }
 
 #startupMsg {
-	text-align: center;
+	padding-top: 60px;
+	padding-left: 60px;
+	
+	text-align: left;
 	font-size: 20px !important;
 	
 	display: block;
 }
 
-#startupMsg > i {
-	font-size: 2em !important;
-	padding-right: 20px;
-	display: inline-block;
-	vertical-align: top;
-}
-
-#startupMsgAct {
-	padding-left: 60px;
-	
-	float: left;
+#startupMsgAct {	
 	width: 400px;
-	line-height: 23px;
-	display: inline-block;
 	
-	text-align: left;
+	line-height: 23px;
+	display: inline-block;	
 }
 
 /* Buttons
